# genai-ml-platform-examples

./: .gitignore  README.md
 oss-idp-agentic-flow/: docling-extract.py  requirements.txt  vision-model.py
demo-apps/health-app/: .gitignore  LICENSE  README.md
demo-apps/health-app/server/: .env.example  bot.py  init_db.py  logger_config.py  notebook.ipynb  prompt.txt  prompt_manager.py  pyproject.toml  requirements.txt  server.py  tools.py
demo-apps/health-app/server/data/: store.db
demo-apps/health-app/server/data/kb/: common_conditions.md  common_conditions.md.metadata.json
demo-apps/travel-app/: README.md
infrastructure/: README.md
infrastructure/cost-efficient-model-inference-sagemaker-graviton/: build_and_push.sh  buildspec.yml  deploy-SLMs-with-sagemaker-inference-graviton-DeepSeek-R1-Distilled.ipynb
infrastructure/efficient model inference/: README.md
infrastructure/inference-with-sagemaker-batch-transform/: .env.example  README.md  check_batch_transform_status.py  deploy_lambda.py  lambda_batch_transform.py  lambda_batch_transform_template.yaml  modernbert_finetune.ipynb  package_model.py  processed_data.csv  requirements.txt  setup_batch_transform.py  (+3 more)
integration/: README.md
operations/: README.md
operations/sagemaker-mlflow-trace-evaluate-langgraph-agent/: .env_sample  .gitignore  README.md  additional_evaluations_with_ragas.ipynb  data.py  evaluations.ipynb  golden_questions_answer.jsonl  graph.py  pyproject.toml  run.py  tools.py  utils.py
sagemaker-mlflow-model-registry/: sm-mlflow_model_registry_register_model_shared_model_group.ipynb
(+1263 files in other folders)
