[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.18",
    "fastapi[all]>=0.115.12",
    "pipecat-ai[aws-nova-sonic,daily,silero,webrtc]",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "websockets==13.1",
]

[tool.uv.sources]
pipecat-ai = { git = "https://github.com/adithyaxx/pipecat.git", rev = "emit-func-call-event" }
